--- a/qs.html
+++ b/qs.html
@@ -9,7 +9,7 @@ line {
 }
 </style>
 
-<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js"></script>
 <script>
 
 var margin = {top: 230, right: 30, bottom: 230, left: 30},
